--- a/lesson-1-machine-learning-pipelines/exercises/exercise_3/starter/conda.yml
+++ b/lesson-1-machine-learning-pipelines/exercises/exercise_3/starter/conda.yml
@@ -3,4 +3,10 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  # Complete HERE
+  - requests=2.24.0
+  - pip=20.3.3
+  - protobuf=3.20.*
+  - mlflow=2.2.2
+  - hydra-core=1.0.6
+  - pip:
+      - wandb==0.13.2
