--- a/lesson-1-machine-learning-pipelines/exercises/exercise_3/starter/download_data/conda.yml
+++ b/lesson-1-machine-learning-pipelines/exercises/exercise_3/starter/download_data/conda.yml
@@ -5,5 +5,8 @@ channels:
 dependencies:
   - requests=2.31.0
   - pip=23.3.1
+  - protobuf=3.20.*
+  - mlflow=2.2.2
+  - hydra-core=1.0.6
   - pip:
-      - wandb==0.16.4
+      - wandb==0.13.2
